@@ -418,7 +418,7 @@ pageStruct* getPageStructPtr(int pagenum);
 void getMimeType(char* filepath,void* ptr);
 void setLanguage(pageStruct* page);
 void runCommand(char* commandtorun,void* ptr,bool interm,int flags,int useroot,char* title);
-functionData* getFunctionByName(char* name,bool recurse);
+functionData* getFunctionByName(char* name,bool recurse,bool casesensitive);
 void destroyData(functionData* fdata);
 void getRecursiveTagList(char* filepath,void* ptr);
 void buildToolsList(void);
